text visibility fix

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   background-color: var(--color-five);
   color: var(--color-one);
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -37,6 +37,7 @@ li {
 
 #logo {
   margin-right: 100px;
+  font-size: 1.5rem;
 }
 
 .logo-one {
@@ -114,6 +115,16 @@ li {
 .large-column {
   text-align: center;
   flex: 3;
+}
+
+.text-gradient {
+  padding: 20px;
+  background: rgb(0, 0, 0);
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.4) 50%,
+    rgba(255, 255, 255, 0) 80%
+  );
 }
 
 .image-grid {
